src/cli/snapshots/ironclaw__cli__tests__help_output_without_import.snap
---
source: src/cli/mod.rs
expression: help
---
Secure personal AI assistant that protects your data and expands its capabilities

Usage: ironclaw-v1 [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to IronClaw)
  config      Manage app configuration settings
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  profile     Manage deployment profiles
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  login       Authenticate with a provider (re-login)
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only                   Run in interactive CLI mode only (disable other channels)
      --no-db                      Skip database connection (for testing)
  -m, --message <MESSAGE>          Single message mode - send one message and exit
  -c, --config <CONFIG>            Configuration file path (optional, uses env vars by default)
      --no-onboard                 Skip first-run onboarding check
      --auto-approve               Auto-approve tool execution (shell, file writes, HTTP, etc.)
      --deployment-mode <MODE>     Deployment mode: where IronClaw is running and who owns the machine boundary
      --runtime-profile <PROFILE>  Requested runtime profile (#3045)
      --yolo-disclosure            Acknowledge the disclosure required by `*_yolo*` profiles
  -h, --help                       Print help (see more with '--help')
  -V, --version                    Print version
