src/cli/snapshots/ironclaw__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
expression: help
---
IronClaw is a secure AI assistant.

Getting started:
  ironclaw-v1 onboard              # Interactive setup wizard (recommended for first run)
  ironclaw-v1 onboard --quick      # Quick setup: just pick a provider and model
  ironclaw-v1 models set-provider openai  # Switch to a specific provider
  ironclaw-v1 doctor               # Check your configuration

Common commands:
  ironclaw-v1 run                  # Start the agent
  ironclaw-v1 config list          # View all settings
  ironclaw-v1 models status        # Show current provider and model
  ironclaw-v1 models list          # List available providers

Use 'ironclaw-v1 <subcommand> --help' for details on any command.

Usage: ironclaw-v1 [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to IronClaw)
  config      Manage app configuration settings
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  profile     Manage deployment profiles
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider (re-login)
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)

          Skips interactive approval prompts for standard tools. Destructive operations still require explicit approval. Other safeguards remain active: rate limits, hooks, authentication gates.

      --deployment-mode <MODE>
          Deployment mode: where IronClaw is running and who owns the machine boundary.

          Wire names: `local_single_user`, `hosted_multi_tenant`, `enterprise_dedicated`. Falls back to `IRONCLAW_DEPLOYMENT_MODE`, then to `local_single_user`.

      --runtime-profile <PROFILE>
          Requested runtime profile (#3045).

          Wire names: `secure_default`, `local_safe`, `local_dev`, `local_yolo`, `hosted_safe`, `hosted_dev`, `hosted_yolo_tenant_scoped`, `enterprise_safe`, `enterprise_dev`, `enterprise_yolo_dedicated`, `sandboxed`, `experiment`. Falls back to `IRONCLAW_RUNTIME_PROFILE`, then to `secure_default`.

      --yolo-disclosure
          Acknowledge the disclosure required by `*_yolo*` profiles.

          Yolo profiles intentionally reduce approvals inside their authority boundary. The CLI must capture explicit operator confirmation — without this flag (or `IRONCLAW_YOLO_DISCLOSURE=true`), any yolo profile selection fails closed.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
